# rust-generator-benchmark

./: Cargo.toml  LICENSE  README.md  create-report.sh
benches/: generator-benchmark.rs
report/generator-benchmark/00 no generator, just loops/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
report/generator-benchmark/00 no generator, just loops/new/: estimates.json  sample.json
report/generator-benchmark/00 no generator, just loops/report/: index.html
report/generator-benchmark/01 no generator, just iterators/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
report/generator-benchmark/01 no generator, just iterators/report/: index.html
report/generator-benchmark/02 native rust generator (unstable)/base/: estimates.json  sample.json
report/generator-benchmark/02 native rust generator (unstable)/new/: benchmark.json  raw.csv  sample.json  tukey.json
report/generator-benchmark/02 native rust generator (unstable)/report/: index.html
report/generator-benchmark/03 next-gen 0.1.1/base/: estimates.json  raw.csv  sample.json  tukey.json
report/generator-benchmark/03 next-gen 0.1.1/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
report/generator-benchmark/03 next-gen 0.1.1/report/: index.html
report/generator-benchmark/04 next-gen 0.1.1 boxed/base/: benchmark.json  estimates.json  raw.csv  tukey.json
report/generator-benchmark/04 next-gen 0.1.1 boxed/new/: estimates.json  sample.json
report/generator-benchmark/report/: index.html
report/report/: index.html
(+79 files in other folders)
